# squad

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
agents/: ai-lead.md  architect.md  customer-success.md  data.md  delivery.md  growth.md  ideation.md  pm.md  sales.md  security.md  ux.md
docs/: AGENTS.md  ARCHITECTURE.md  FOR_AI_COLLABORATORS.md  SITAVISTA_TEST.md  TROUBLESHOOTING.md  TUNING.md  v1-archive.md
plans/: squad-plan-1-core.md  squad-plan-2-intelligence.md  squad-plan-3-integration.md  squad-plan-4-slack.md  squad-plan-5-active-exploration.md  squad-plan-6-ideation.md  squad-plan-7-hardening.md  squad-plan-8-dashboard.md  squad-plan-9-plans-autoscan.md
scripts/: install-skills.sh  preflight.sh  squad-autonomous-primer.md
squad/: __init__.py  attachment_service.py  cli.py  config.py  constants.py  context_builder.py  db.py  executor.py  forge_bridge.py  forge_format.py  ideation.py  input_richness.py  models.py  notifier.py  phase_config.py  phase_contracts.py  pipeline.py  plan_generator.py  plans_autoscan.py  recovery.py  research.py  review_service.py  slack_app.py  slack_handlers.py  slack_service.py  subject_detector.py  workspace.py
templates/: forge-plan.md
tests/: conftest.py  test_agents.py  test_attachment_service.py  test_cli.py  test_cli_commands.py  test_config.py  test_context_builder.py  test_dashboard.py  test_db.py  test_executor.py  test_forge_bridge.py  test_forge_format.py  test_ideation.py  test_input_richness.py  test_models.py  test_notifier.py  test_phase_config.py  test_phase_contracts.py  test_pipeline.py  (+9 more)
(+9 files in other folders)
