[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squad"
version = "0.1.0"
description = "AI product squad — turns ideas into Forge-executable plans"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "sqlite-utils>=3.35",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
slack = [
    "slack-bolt>=1.20,<2.0",
]

[project.scripts]
squad = "squad.cli:cli"

[tool.setuptools.packages.find]
include = ["squad*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that call Claude CLI (deselect with '-m not integration')",
]
